publish: Fix: QCheckbox vertical alignment
generated from commit e83ade0824dd3d64cc072a333b7d650fd0a0ae1f

--- a/src/css/core/typography.styl
+++ b/src/css/core/typography.styl
@@ -1,5 +1,5 @@
 body
-  min-width 320px
+  min-width 200px
   font-family $typography-font-family
   -ms-text-size-adjust 100%
   -webkit-text-size-adjust 100%
@@ -98,7 +98,7 @@ p
 .light-paragraph
   font-weight 300
 .thin-paragraph
-  font-weight 200
+  font-weight 100
 
 small
   font-size 80%
